syntax = "proto3";
package cosmos_sdk.x.params.v1;

option go_package            = "github.com/cosmos/cosmos-sdk/x/params/types/proposal";
option (gogoproto.equal_all) = true;

import "third_party/proto/gogoproto/gogo.proto";

// ParameterChangeProposal defines a proposal which contains multiple parameter
// changes.
message ParameterChangeProposal {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string               title       = 1;
  string               description = 2;
  repeated ParamChange changes     = 3 [(gogoproto.nullable) = false];
}

// ParamChange defines a parameter change.
message ParamChange {
  option (gogoproto.goproto_stringer) = false;

  string subspace = 1;
  string key      = 2;
  string value    = 3;
}
